# dumb_translation_bot

./: Dockerfile  LICENSE  Makefile  Pipfile  README.md  app.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: docker-build-push.yml
telegram_dumb_translate_bot/: __init__.py  main.py
